先录到文件中
mediarecorder录到文件中，需要设置uses-permission

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
     <string name="app_name">PhoneShareScreen</string>
     <string name="sharescreen_to">共享屏幕</string>
     <string name="sharescreen_from">接收屏幕</string>
+    <string name="start_record">开始录制</string>
+    <string name="stop_record">停止录制</string>
     <string name="title_activity_screen_share">ScreenShareActivity</string>
 </resources>
